--- a/sources/stylesheets/components/_content-item.scss
+++ b/sources/stylesheets/components/_content-item.scss
@@ -537,3 +537,14 @@
     display: flex;
   }
 }
+
+.dark-background {
+  .edy-product-widget-filter-sort,
+  .edy-product-widget-filter-search-input {
+    opacity: .7;
+  }
+
+  .edy-product-widget-filter-label {
+    opacity: .5;
+  }
+}
